Small fix for Navigation Bar on mobile

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -75,6 +75,10 @@
   .badges {
     &-container {
       max-width: 250px;
+
+      a {
+        font-size: 0.9rem;
+      }
     }
   }
 }
@@ -89,7 +93,7 @@
       padding: 1.45rem 0rem;
 
       h1 {
-        font-size: 0.85rem;
+        font-size: 0.9rem;
       }
     }
   }
@@ -98,6 +102,10 @@
     &-container {
       max-width: 200px;
       margin-left: 1.5rem;
+
+      a {
+        font-size: 0.8rem;
+      }
     }
   }
 }
